--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "mocha",
-    "start": "node test.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Yifu-Jensen Dong",
