--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+.manifestStorage/manifest.json filter=lfs diff=lfs merge=lfs -text
+manifestStorage/manifest.json filter=lfs diff=lfs merge=lfs -text
 manifestStorage/DestinyInventoryItemDefinition.json filter=lfs diff=lfs merge=lfs -text
 manifestStorage/manifest.content filter=lfs diff=lfs merge=lfs -text
 manifestStorage/world_sql_content_a60bfd44db54f6b31f8c824a016e50f7.content filter=lfs diff=lfs merge=lfs -text
